@@ -1,0 +1,22 @@
+>=sys-libs/zlib-1.1 bzip2? ( app-arch/bzip2 ) fam? ( virtual/fam ) gdbm? ( sys-libs/gdbm ) ldap? ( >=net-nds/openldap-2.1.26 ) lua? ( >=dev-lang/lua-5.1 ) memcache? ( dev-libs/libmemcache ) mysql? ( >=virtual/mysql-4.0 ) pcre? ( >=dev-libs/libpcre-3.1 ) php? ( virtual/httpd-php[cgi] ) rrdtool? ( net-analyzer/rrdtool ) fastcgi? ( www-servers/spawn-fcgi ) ssl? ( >=dev-libs/openssl-0.9.7 ) webdav? ( dev-libs/libxml2 >=dev-db/sqlite-3 sys-fs/e2fsprogs ) xattr? ( kernel_linux? ( sys-apps/attr ) ) doc? ( dev-python/docutils ) test? ( virtual/perl-Test-Harness dev-libs/fcgi ) =sys-devel/automake-1.10* >=sys-devel/autoconf-2.61 sys-devel/libtool
+>=sys-libs/zlib-1.1 bzip2? ( app-arch/bzip2 ) fam? ( virtual/fam ) gdbm? ( sys-libs/gdbm ) ldap? ( >=net-nds/openldap-2.1.26 ) lua? ( >=dev-lang/lua-5.1 ) memcache? ( dev-libs/libmemcache ) mysql? ( >=virtual/mysql-4.0 ) pcre? ( >=dev-libs/libpcre-3.1 ) php? ( virtual/httpd-php[cgi] ) rrdtool? ( net-analyzer/rrdtool ) fastcgi? ( www-servers/spawn-fcgi ) ssl? ( >=dev-libs/openssl-0.9.7 ) webdav? ( dev-libs/libxml2 >=dev-db/sqlite-3 sys-fs/e2fsprogs ) xattr? ( kernel_linux? ( sys-apps/attr ) )
+0
+http://www.lighttpd.net/download/lighttpd-1.4.22.tar.bz2
+
+http://www.lighttpd.net/
+BSD
+Lightweight high-performance web server
+~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd
+toolchain-funcs portability multilib libtool autotools eutils
+bzip2 doc fam fastcgi gdbm ipv6 ldap lua minimal memcache mysql pcre php rrdtool ssl test webdav xattr
+
+
+
+2
+
+compile configure install postinst prepare setup
+
+
+
+
+
