@@ -16,7 +16,9 @@ AUX spawn-fcgi.confd 1076 RMD160 9468249fdedc39fa762a569622bae93f8b3481f9 SHA1 8
 AUX spawn-fcgi.initd 1398 RMD160 3fd0fa41d100629e85960034237abc0866ec3d38 SHA1 9c07c9fd59ec73d5f37df109b188b8a7d691f949 SHA256 ae10c764e2bde9bfc483c57ca94a63d87c24cba00b4c06917885c533d2d245b1
 DIST lighttpd-1.4.19.tar.bz2 610347 RMD160 8731ba3efc95659a16dbb11b7298e3b539ab3c75 SHA1 fd4450e7faae55ebe0905114722995b0c57397cc SHA256 a239323239c3735a04290f7c063a14ed2c4560a88c15181c253fcd68c6c2f1d7
 DIST lighttpd-1.4.20.tar.bz2 618018 RMD160 0fcc71d6063574da86b610c9bdc16b7e44f9d2e7 SHA1 e5944a40579e0f37c6a0eeb0ad751344b2d6006c SHA256 3cda2ce779f24948062f765f2630b5865e483f5fab7149681a2a25422fd61176
+DIST lighttpd-1.4.22.tar.bz2 657939 RMD160 04dcf5565ee6deb3e91449cf54309645f88a43fb SHA1 33390d4cc72b61405c0803358f8d9112821c194b SHA256 6d217dd47fbbf431ee37aa6f12604411204be1fb37bc2a70e14d15dab507c451
 EBUILD lighttpd-1.4.19-r2.ebuild 5839 RMD160 0947b4c115cc5ecbc0ec67aa4b077b70c1714d09 SHA1 9ccbbb41364d162b09e52134cbc47c72f731ffdc SHA256 373f9b64c41abce5d09af55a16218ab34ac44bedc4cc6019d034d20865db4ac4
 EBUILD lighttpd-1.4.20.ebuild 5960 RMD160 19f74751b53e92f9876c0015b0fc850733c20021 SHA1 4de12f3cba5ef21bf55a16e4b5a9ca2ab64d1816 SHA256 45c275d895a00370c905b0aa37ebdba46872930034843bb0375fdfa1c0f78f72
-MISC ChangeLog 45775 RMD160 debfb492054058ddfbc73250fa4fc14fb87b7174 SHA1 26252a2642ec0a319947f3b1dcf179ea8e290b2f SHA256 2b5960f02cbd823b8fcd271ca5e4e15b4495ef22c7be6d662c780cae50ff0c07
+EBUILD lighttpd-1.4.22.ebuild 5795 RMD160 7d986cb97d6977e4a421973af5ba75011a753c6c SHA1 bbe2ec635ee235e21e7e6c95a621c59dbf58fb46 SHA256 e8bbe714fa2683a018db1e3c7de135fd80fdb159a30c97d202240f1ba3755e6e
+MISC ChangeLog 45898 RMD160 de5b72504bad2e0b9245e0e3533f8473f78c8149 SHA1 38e32caf2e8428c118c90d93893924183f2a1a45 SHA256 081352f2c96f085e3c2f236b106339b69b165e1c1d570a7c4ede04346b0dcf07
 MISC metadata.xml 927 RMD160 3d969f099d1bb8df70ec5f8ed78a83ad27d2b10d SHA1 1e564c4fc4edb8a4b2dc41f731071ec38e917027 SHA256 479db26201c5c934fd5fb5deccd8712a637114d5cde6e75da8ce9ad4872ec070
