@@ -2,6 +2,9 @@
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/www-servers/lighttpd/ChangeLog,v 1.197 2009/04/03 20:59:34 bangert Exp $
 
+  10 Apr 2009; Daniel Robbins <drobbins@funtoo.org> +lighttpd-1.4.22.ebuild:
+  New ebuild from Thilo Bangert (bug 260174)
+
   03 Apr 2009; Thilo Bangert <bangert@gentoo.org>
   files/conf/mod_fastcgi.conf, files/lighttpd.initd:
   prepare for 1.4.22 - copy mod_fastcgi.conf-1.4.13-r2 to mod_fastcgi.conf
